# qurna-safety

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: audit.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  violation_logic.py
backend/app/routers/: audit.py  auth.py  contractors.py  dashboard.py  drivers.py  reports.py  users.py  violation_types.py  violations.py
backend/static/: index.html
backend/static/assets/: index-BrIEpnmA.js  index-C9OaP9E9.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Layout.tsx  Modal.tsx  Table.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/i18n/: I18nContext.tsx  translations.ts
frontend/src/pages/: AuditPage.tsx  ContractorsPage.tsx  DashboardPage.tsx  DriversPage.tsx  LoginPage.tsx  UsersPage.tsx  ViolationTypesPage.tsx  ViolationsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
